--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ background: #4477a1;
 &nbsp;&nbsp;
 &nbsp;&nbsp;
 &nbsp;&nbsp;
-<p><a href="play.php" class="button button-blue">
+<p><a href="indexx.html" class="button button-blue">
 <span>ИГРАТЬ!</span>
 </a></p>
 <p><a href="https://vk.me/pointvk" class="button button-blue">
